[project]
name = "random-video-player"
version = "0.1.0"
description = "A video player that randomly plays segments from videos in a directory"
authors = [
    {name = "Alex Meng", email = "tannal2409@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "PyGObject>=3.42.0",  # for gi
    "pynput>=1.7.6",      # for keyboard control
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
]


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.urls]
Homepage = "https://github.com/tannal/tiktok-player"
Repository = "https://github.com/tannal/tiktok-player.git"
Documentation = "https://github.com/tannal/tiktok-player#readme"

[project.scripts]
video-player = "random_video_player.main:main"